<?xml version="1.0"?>
<package>
  <name>fetch_tools</name>
  <version>0.1.1</version>
  <description>Commands for performing common operations when
  developing on the robots. For help, run `fetch -h` and `fetch
  COMMAND -h`.</description>

  <author email="ahenning@fetchrobotics.com">Alex Henning</author>
  <maintainer email="ahenning@fetchrobotics.com">Alex Henning</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/fetchrobotics/fetch_tools/blob/master/README.md</url>
  <url type="repository">https://github.com/fetchrobotics/fetch_tools</url>
  <url type="bugtracker">https://github.com/fetchrobotics/fetch_tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>python-rospkg</build_depend>

  <run_depend>python-argcomplete</run_depend>
  <run_depend>python-catkin-lint</run_depend>
  <run_depend>roslint</run_depend>
  <run_depend>sshpass</run_depend>

  <export></export>
</package>
